--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
+  "type": "module",
   "dependencies": {
     "inquirer": "^12.10.0",
     "qr-image": "^3.2.0"
-  }
+  },
+  "name": "qr_codegenerator",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/idobanj/QR-code-generator.git"
+  },
+  "keywords": [],
+  "author": "olabamiji idowu",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/idobanj/QR-code-generator/issues"
+  },
+  "homepage": "https://github.com/idobanj/QR-code-generator#readme"
 }
