--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
     "inquirer": "^12.10.0",
     "qr-image": "^3.2.0"
   },
@@ -8,7 +10,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
